--- a/style.css
+++ b/style.css
@@ -1,4 +1,25 @@
+.body {
+    background: #000066;
+}
 .shell {
     max-width: 1200px;
     margin: 0 auto;
+}
+.header {
+    height: 400px;
+    background: #757575;
+}
+.nav {
+    width: 100%;
+    height: 40px;
+    background: #0000b2;
+}
+.content {
+    height: 1000px;
+    background: #FFFFFF;
+}
+.footer {
+    width: 100%;
+    height: 400px;
+    background: #0000b2;
 }
