--- a/style.css
+++ b/style.css
@@ -7,7 +7,12 @@
 }
 .header {
     height: 400px;
-    background: #757575;
+    background-image: url("images/LOL_logo.png");
+    -webkit-filter: blur(5px);
+    -moz-filter: blur(5px);
+    -o-filter: blur(5px);
+    -ms-filter: blur(5px);
+    filter: blur(5px);
 }
 .nav {
     width: 100%;
